# htan-cli

./: .env.example  .gitignore  .readthedocs.yaml  CLAUDE.md  LICENSE.txt  README.md  pyproject.toml
docs/: conf.py  index.md  install.md  quickstart.md
docs/api/: config.md  download.gen3.md  download.synapse.md  files.md  index.md  init.md  model.md  pubs.md  query.bq.md  query.portal.md
docs/cli/: index.md
src/htan/: __init__.py  __main__.py  cli.py  config.py  files.py  init.py  model.py  pubs.py
src/htan/download/: __init__.py  gen3.py  synapse.py
src/htan/query/: __init__.py  bq.py  portal.py
src/htan/upload/: __init__.py  synapse.py
tests/: test_bq_client.py  test_cli.py  test_cli_dispatch.py  test_config.py  test_download_gen3.py  test_download_logic.py  test_download_synapse.py  test_files.py  test_files_logic.py  test_imports.py  test_init.py  test_model.py  test_model_logic.py  test_portal_client.py  test_portal_formatting.py  test_pubs.py  test_pubs_api.py  test_pubs_queries.py  test_query_bq.py  test_query_portal.py  test_upload_synapse.py
