[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "htan"
version = "0.1.0"
description = "Python tools for accessing Human Tumor Atlas Network (HTAN) data"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = []  # Core is stdlib-only

[project.optional-dependencies]
synapse = ["synapseclient>=4.0"]
gen3 = ["gen3>=4.27"]
bigquery = [
    "google-cloud-bigquery>=3.40",
    "google-cloud-bigquery-storage>=2.36",
    "pandas>=2.0",
    "db-dtypes>=1.5",
]
all = [
    "htan[synapse]",
    "htan[gen3]",
    "htan[bigquery]",
]
dev = ["pytest>=7.0", "ruff>=0.1"]

[project.scripts]
htan = "htan.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/htan"]
