[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "htan"
version = "0.2.0"
description = "Python tools for accessing Human Tumor Atlas Network (HTAN) data"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "synapseclient>=4.0",
    "gen3>=4.27",
    "google-cloud-bigquery>=3.40",
    "google-cloud-bigquery-storage>=2.36",
    "pandas>=2.0",
    "db-dtypes>=1.5",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.1"]

[project.urls]
Homepage = "https://github.com/ncihtan/htan-cli"
Repository = "https://github.com/ncihtan/htan-cli"
Issues = "https://github.com/ncihtan/htan-cli/issues"
"Claude Code Plugin" = "https://github.com/ncihtan/htan-claude"

[project.scripts]
htan = "htan.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/htan"]
